update css responsivo

--- a/estilocontato.css
+++ b/estilocontato.css
@@ -10,6 +10,21 @@ body{
         padding: 0%;
 }
 
+@media screen and (max-width){
+    body{
+         background-image:url("imagens/andcontato_mobiledpi.png");
+    }
+    #navbar{
+        display: flex;
+        justify-content: space-between;
+        padding-left: unset;
+    }
+    #formulario{
+        margin-top: 1%;
+        margin-left: 1%;
+    }
+}
+
 #cabecalho{
     color: #ccabd8;
     margin: 0%;
