--- a/estilohome.css
+++ b/estilohome.css
@@ -1,13 +1,36 @@
 body{
-        background-image: url("imagens/home.png");
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: 100%;
-        background-attachment: scroll;
-        background-color: #fa897b;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        margin: 0%;
-        padding: 0%;
+    background-image: url("imagens/home.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100%;
+    background-attachment: scroll;
+    background-color: #fa897b;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0%;
+    padding: 0%;
+}
+
+@media screen and (max-width: 720px){
+    body{
+         background-image:url("imagens/andsm_mobiledpi.png");
+    }
+
+    #navbar{
+        display: flex;
+        justify-content: space-between;
+        padding: unset;
+    }
+
+    #noticias{
+        display: unset;
+        margin: 2%
+    }
+    #videos{
+        display: flex;
+        justify-content: space-between;
+        padding: unset;
+        margin: unset;
+    }
 }
 
 #cabecalho{
