--- a/estilosobre.css
+++ b/estilosobre.css
@@ -9,6 +9,29 @@ body{
         margin: 0%;
         padding: 0%;
 }
+@media screen and (max-width){
+    body{
+         background-image:url("imagens/andsobre_mobiledpi.png");
+    }
+    #sobre{
+        display: flex;
+        justify-content: space-between;
+    }
+    #minhaImg{
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 1%;
+        margin-bottom: 1%;
+        width: 100%;
+    }
+    #textsobre{
+        width: 100%;
+        padding: 1%;
+        margin-right: 2%;
+        margin-left: 2%;
+    }
+
+}
 
 #cabecalho{
     color: #fa897b;
