--- a/estilosobre.css
+++ b/estilosobre.css
@@ -9,7 +9,7 @@ body{
         margin: 0%;
         padding: 0%;
 }
-@media screen and (max-width){
+@media screen and (max-width: 720px){
     body{
          background-image:url("imagens/andsobre_mobiledpi.png");
     }
