--- a/estilocontato.css
+++ b/estilocontato.css
@@ -10,7 +10,7 @@ body{
         padding: 0%;
 }
 
-@media screen and (max-width){
+@media screen and (max-width: 720px){
     body{
          background-image:url("imagens/andcontato_mobiledpi.png");
     }
